--- a/api/database.json.example
+++ b/api/database.json.example
@@ -53,6 +53,34 @@
       "sideId": 2,
       "userId": 1,
       "id": 6
+    },
+    {
+      "mapId": 3,
+      "siteId": 7,
+      "sideId": 2,
+      "userId": 1,
+      "id": 7
+    },
+    {
+      "mapId": 3,
+      "siteId": 7,
+      "sideId": 1,
+      "userId": 1,
+      "id": 8
+    },
+    {
+      "mapId": 3,
+      "siteId": 7,
+      "sideId": 2,
+      "userId": 1,
+      "id": 9
+    },
+    {
+      "mapId": 3,
+      "siteId": 7,
+      "sideId": 1,
+      "userId": 1,
+      "id": 10
     }
   ],
   "maps": [
@@ -299,360 +327,420 @@
       "id": 1,
       "name": "Sledge",
       "side": 1,
+      "role": "",
       "img": "/images/icons/sledge.png"
     },
     {
       "id": 2,
       "name": "Thatcher",
       "side": 1,
+      "role": "",
       "img": "/images/icons/thatcher.png"
     },
     {
       "id": 3,
       "name": "Ash",
       "side": 1,
+      "role": "",
       "img": "/images/icons/ash.png"
     },
     {
       "id": 4,
       "name": "Thermite",
       "side": 1,
+      "role": "",
       "img": "/images/icons/thermite.png"
     },
     {
       "id": 5,
       "name": "Twitch",
       "side": 1,
+      "role": "",
       "img": "/images/icons/twitch.png"
     },
     {
       "id": 6,
       "name": "Montagne",
       "side": 1,
+      "role": "",
       "img": "/images/icons/montagne.png"
     },
     {
       "id": 7,
       "name": "Glaz",
       "side": 1,
+      "role": "",
       "img": "/images/icons/glaz.png"
     },
     {
       "id": 8,
       "name": "Fuze",
       "side": 1,
+      "role": "",
       "img": "/images/icons/fuze.png"
     },
     {
       "id": 9,
       "name": "Blitz",
       "side": 1,
+      "role": "",
       "img": "/images/icons/blitz.png"
     },
     {
       "id": 10,
       "name": "IQ",
       "side": 1,
+      "role": "",
       "img": "/images/icons/iq.png"
     },
     {
       "id": 11,
       "name": "Buck",
       "side": 1,
+      "role": "",
       "img": "/images/icons/buck.png"
     },
     {
       "id": 12,
       "name": "Blackbeard",
       "side": 1,
+      "role": "",
       "img": "/images/icons/blackbeard.png"
     },
     {
       "id": 13,
       "name": "Capitão",
       "side": 1,
+      "role": "",
       "img": "/images/icons/capitao.png"
     },
     {
       "id": 14,
       "name": "Hibana",
       "side": 1,
+      "role": "",
       "img": "/images/icons/hibana.png"
     },
     {
       "id": 15,
       "name": "Jackal",
       "side": 1,
+      "role": "",
       "img": "/images/icons/jackal.png"
     },
     {
       "id": 16,
       "name": "Ying",
       "side": 1,
+      "role": "",
       "img": "/images/icons/ying.png"
     },
     {
       "id": 17,
       "name": "Zofia",
       "side": 1,
+      "role": "",
       "img": "/images/icons/zofia.png"
     },
     {
       "id": 18,
       "name": "Dokkaebi",
       "side": 1,
+      "role": "",
       "img": "/images/icons/dokkaebi.png"
     },
     {
       "id": 19,
       "name": "Lion",
       "side": 1,
+      "role": "",
       "img": "/images/icons/lion.png"
     },
     {
       "id": 20,
       "name": "Finka",
       "side": 1,
+      "role": "",
       "img": "/images/icons/finka.png"
     },
     {
       "id": 21,
       "name": "Maverick",
       "side": 1,
+      "role": "",
       "img": "/images/icons/maverick.png"
     },
     {
       "id": 22,
       "name": "Nomad",
       "side": 1,
+      "role": "",
       "img": "/images/icons/nomad.png"
     },
     {
       "id": 23,
       "name": "Gridlock",
       "side": 1,
+      "role": "",
       "img": "/images/icons/gridlock.png"
     },
     {
       "id": 24,
       "name": "Nøkk",
       "side": 1,
+      "role": "",
       "img": "/images/icons/nokk.png"
     },
     {
       "id": 25,
       "name": "Amaru",
       "side": 1,
+      "role": "",
       "img": "/images/icons/amaru.png"
     },
     {
       "id": 26,
       "name": "Kali",
       "side": 1,
+      "role": "",
       "img": "/images/icons/kali.png"
     },
     {
       "id": 27,
       "name": "Iana",
       "side": 1,
+      "role": "",
       "img": "/images/icons/iana.png"
     },
     {
       "id": 28,
       "name": "Ace",
       "side": 1,
+      "role": "",
       "img": "/images/icons/ace.png"
     },
     {
       "id": 29,
       "name": "Zero",
       "side": 1,
+      "role": "",
       "img": "/images/icons/zero.png"
     },
     {
       "id": 30,
       "name": "Flores",
       "side": 1,
+      "role": "",
       "img": "/images/icons/flores.png"
     },
     {
       "id": 31,
       "name": "Smoke",
       "side": 2,
+      "role": "",
       "img": "/images/icons/smoke.png"
     },
     {
       "id": 32,
       "name": "Mute",
       "side": 2,
+      "role": "",
       "img": "/images/icons/mute.png"
     },
     {
       "id": 33,
       "name": "Castle",
       "side": 2,
+      "role": "",
       "img": "/images/icons/castle.png"
     },
     {
       "id": 34,
       "name": "Pulse",
       "side": 2,
+      "role": "",
       "img": "/images/icons/pulse.png"
     },
     {
       "id": 35,
       "name": "Doc",
       "side": 2,
+      "role": "",
       "img": "/images/icons/doc.png"
     },
     {
       "id": 36,
       "name": "Rook",
       "side": 2,
+      "role": "",
       "img": "/images/icons/rook.png"
     },
     {
       "id": 37,
       "name": "KapKan",
       "side": 2,
+      "role": "",
       "img": "/images/icons/kapkan.png"
     },
     {
       "id": 38,
       "name": "Tachanka",
       "side": 2,
+      "role": "",
       "img": "/images/icons/tachanka.png"
     },
     {
       "id": 39,
       "name": "Jäger",
       "side": 2,
+      "role": "",
       "img": "/images/icons/jager.png"
     },
     {
       "id": 40,
       "name": "Bandit",
       "side": 2,
+      "role": "",
       "img": "/images/icons/bandit.png"
     },
     {
       "id": 41,
       "name": "Frost",
       "side": 2,
+      "role": "",
       "img": "/images/icons/frost.png"
     },
     {
       "id": 42,
       "name": "Valkyrie",
       "side": 2,
+      "role": "",
       "img": "/images/icons/valkyrie.png"
     },
     {
       "id": 43,
       "name": "Caveira",
       "side": 2,
+      "role": "",
       "img": "/images/icons/caveira.png"
     },
     {
       "id": 44,
       "name": "Echo",
       "side": 2,
+      "role": "",
       "img": "/images/icons/echo.png"
     },
     {
       "id": 45,
       "name": "Mira",
       "side": 2,
+      "role": "",
       "img": "/images/icons/mira.png"
     },
     {
       "id": 46,
       "name": "Lesion",
       "side": 2,
+      "role": "",
       "img": "/images/icons/lesion.png"
     },
     {
       "id": 47,
       "name": "Ela",
       "side": 2,
+      "role": "",
       "img": "/images/icons/ela.png"
     },
     {
       "id": 48,
       "name": "Vigil",
       "side": 2,
+      "role": "",
       "img": "/images/icons/vigil.png"
     },
     {
       "id": 49,
       "name": "Maestro",
       "side": 2,
+      "role": "",
       "img": "/images/icons/maestro.png"
     },
     {
       "id": 50,
       "name": "Alibi",
       "side": 2,
+      "role": "",
       "img": "/images/icons/alibi.png"
     },
     {
       "id": 51,
       "name": "Clash",
       "side": 2,
+      "role": "",
       "img": "/images/icons/clash.png"
     },
     {
       "id": 52,
       "name": "Kaid",
       "side": 2,
+      "role": "",
       "img": "/images/icons/kaid.png"
     },
     {
       "id": 53,
       "name": "Mozzie",
       "side": 2,
+      "role": "",
       "img": "/images/icons/mozzie.png"
     },
     {
       "id": 54,
       "name": "Warden",
       "side": 2,
+      "role": "",
       "img": "/images/icons/warden.png"
     },
     {
       "id": 55,
       "name": "Goyo",
       "side": 2,
+      "role": "",
       "img": "/images/icons/goyo.png"
     },
     {
       "id": 56,
       "name": "Wamai",
       "side": 2,
+      "role": "",
       "img": "/images/icons/wamai.png"
     },
     {
       "id": 57,
       "name": "Oryx",
       "side": 2,
+      "role": "",
       "img": "/images/icons/oryx.png"
     },
     {
       "id": 58,
       "name": "Melusi",
       "side": 2,
+      "role": "",
       "img": "/images/icons/melusi.png"
     },
     {
       "id": 59,
       "name": "Aruni",
       "side": 2,
+      "role": "",
       "img": "/images/icons/aruni.png"
     },
     {
       "id": 60,
       "name": "ThunderBird",
       "side": 2,
+      "role": "",
       "img": "/images/icons/thunderbird.png"
     }
   ],
@@ -662,132 +750,5 @@
       "role": "test",
       "operatorId": 1,
       "strategiesId": 1
-    },
-    {
-      "strategyId": 2,
-      "role": "test",
-      "operatorId": 31,
-      "id": 2
-    },
-    {
-      "strategyId": 2,
-      "role": "test",
-      "operatorId": 40,
-      "id": 3
-    },
-    {
-      "strategyId": 2,
-      "role": "test",
-      "operatorId": 49,
-      "id": 4
-    },
-    {
-      "strategyId": 2,
-      "role": "test",
-      "operatorId": 58,
-      "id": 5
-    },
-    {
-      "strategyId": 2,
-      "role": "test",
-      "operatorId": 59,
-      "id": 6
-    },
-    {
-      "strategyId": 3,
-      "role": "fly into piano and get fuzed immediately ",
-      "operatorId": 25,
-      "id": 7
-    },
-    {
-      "strategyId": 3,
-      "role": "fly into piano and get fuzed immediately ",
-      "operatorId": 28,
-      "id": 8
-    },
-    {
-      "strategyId": 3,
-      "role": "fly into piano and get fuzed immediately ",
-      "operatorId": 8,
-      "id": 9
-    },
-    {
-      "strategyId": 3,
-      "role": "fly into piano and get fuzed immediately ",
-      "operatorId": 13,
-      "id": 10
-    },
-    {
-      "strategyId": 3,
-      "role": "fly into piano and get fuzed immediately ",
-      "operatorId": 6,
-      "id": 11
-    },
-    {
-      "strategyId": 4,
-      "role": "",
-      "operatorId": 13,
-      "id": 12
-    },
-    {
-      "strategyId": 5,
-      "role": "",
-      "operatorId": 35,
-      "id": 13
-    },
-    {
-      "strategyId": 5,
-      "role": "",
-      "operatorId": 36,
-      "id": 14
-    },
-    {
-      "strategyId": 5,
-      "role": "",
-      "operatorId": 37,
-      "id": 15
-    },
-    {
-      "strategyId": 5,
-      "role": "",
-      "operatorId": 38,
-      "id": 16
-    },
-    {
-      "strategyId": 5,
-      "role": "",
-      "operatorId": 46,
-      "id": 17
-    },
-    {
-      "strategyId": 6,
-      "role": "testt",
-      "operatorId": 35,
-      "id": 18
-    },
-    {
-      "strategyId": 6,
-      "role": "testt",
-      "operatorId": 36,
-      "id": 19
-    },
-    {
-      "strategyId": 6,
-      "role": "testt",
-      "operatorId": 45,
-      "id": 20
-    },
-    {
-      "strategyId": 6,
-      "role": "testt",
-      "operatorId": 44,
-      "id": 21
-    },
-    {
-      "strategyId": 6,
-      "role": "testt",
-      "operatorId": 53,
-      "id": 22
     }
   ]
-}
